--- a/login.html
+++ b/login.html
@@ -1,4 +1,3 @@
-<!-- login.html -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -21,11 +20,14 @@
       const user = document.getElementById('user').value;
       const pass = document.getElementById('pass').value;
 
-      if (user && pass) {
-        // Redirige al index.html
+      const validUser = "admin";
+      const validPass = "1234";
+
+      if (user === validUser && pass === validPass) {
+        localStorage.setItem("user", user);
         window.location.href = "index.html";
       } else {
-        alert('Por favor ingresa usuario y contraseña');
+        alert("Usuario o contraseña incorrectos.");
       }
     }
   </script>
