--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Mi Plataforma</title>
+  
+
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div id="platform-screen">
     <header>
-      <div class="logo">MiPlataforma</div>
+       <img src="img/imagen1.png" class="img1" />
+      <div class="logo"></div>
       <div class="profile">
         <span id="username"></span>
         <img src="https://i.pravatar.cc/40" alt="Perfil" />
@@ -21,8 +23,8 @@
       <aside class="sidebar">
         <h2>Clases</h2>
         <ul id="class-list">
-          <li onclick="loadVideo('Clase 1', 'https://www.youtube.com/embed/dQw4w9WgXcQ')">Clase 1</li>
-          <li onclick="loadVideo('Clase 2', 'https://www.youtube.com/embed/tgbNymZ7vqY')">Clase 2</li>
+          <li onclick="loadVideo('Clase 1', 'https://www.youtube.com/embed/XeXFUoazjrQ')">Clase 1</li>
+          <li onclick="loadVideo('Clase 2', 'https://www.youtube.com/embed/3vl7kPIRzsY')">Clase 2</li>
         </ul>
       </aside>
 
