--- a/index.html
+++ b/index.html
@@ -13,30 +13,35 @@
   </header>
 
   <main class="welcome-content">
-    <section>
+    <section class="info-section">
       <h2>¿Quiénes somos?</h2>
       <p>
-        Somos una organización que sirve a Dios mediante imparticiones, entrenamientos y asesorías, con el fin de que los hijos de Dios sean reconciliados con su propósito, edificados en los principios del sistema económico del Reino, y manifiesten a Cristo en la esfera laboral y empresarial.
+        Somos una organización que sirve a Dios mediante imparticiones, entrenamientos y asesorías, 
+        con el fin de que los hijos de Dios sean reconciliados con su propósito, edificados en los 
+        principios del sistema económico del Reino, y manifiesten a Cristo en la esfera laboral y empresarial.
       </p>
     </section>
 
-    <section>
+    <section class="info-section">
       <h2>Misión</h2>
       <p>
-        Reconectar a los hijos de Dios con el propósito y diseño económico del Reino a través de un proceso de transformación mental y edificación espiritual.
+        Reconectar a los hijos de Dios con el propósito y diseño económico del Reino a través de un proceso 
+        de transformación mental y edificación espiritual.
       </p>
     </section>
 
-    <section>
+    <section class="info-section">
       <h2>Visión</h2>
       <p>
-        Impactar la economía del Reino edificando pastores, empresarios y consejeros que fluyan con productividad, sabiduría y manifestación de Cristo en sus áreas de influencia.
+        Impactar la economía del Reino edificando pastores, empresarios y consejeros que fluyan con productividad, 
+        sabiduría y manifestación de Cristo en sus áreas de influencia.
       </p>
     </section>
 
-    <div style="text-align: center; margin-top: 30px;">
+    <div class="button-container">
       <button onclick="window.location.href='clases.html'">Ir a Clases</button>
     </div>
   </main>
 </body>
 </html>
+
