--- a/clases.html
+++ b/clases.html
@@ -1,4 +1,3 @@
-<!-- clases.html -->
 <!doctype html>
 <html lang="es">
   <head>
@@ -14,10 +13,18 @@
         <div class="logo"></div>
         <div class="profile">
           <span id="username"></span>
-          <img src="https://i.pravatar.cc/40" alt="Perfil" />
-          <a href="perfil.html" class="perfil-icono" title="Mi perfil">👤</a>
-
-          <button onclick="logout()">Cerrar sesión</button>
+          <div class="dropdown">
+            <img
+              src="https://i.pravatar.cc/40"
+              alt="Perfil"
+              class="profile-pic"
+              id="profilePic"
+            />
+            <div id="dropdownMenu" class="dropdown-menu hidden">
+              <a href="perfil.html">👤 Mi perfil</a>
+              <a href="#" onclick="logout()">🔒 Cerrar sesión</a>
+            </div>
+          </div>
         </div>
       </header>
 
@@ -85,7 +92,6 @@
       let player;
 
       const questionnaire = document.getElementById('modal-questionnaire');
-
       const questionTitle = document.getElementById('question-title');
       const answerInput = document.getElementById('answer');
 
@@ -109,12 +115,10 @@
 
         const videoId = url.split('/embed/')[1];
 
-        // Elimina el reproductor anterior si existe
         if (player && typeof player.destroy === 'function') {
           player.destroy();
         }
 
-        // Limpia el contenedor e inserta uno nuevo
         const container = document.getElementById('video-frame-container');
         container.innerHTML = `<div id="video-frame"></div>`;
 
@@ -131,7 +135,6 @@
           },
         });
 
-        // Actualiza clases activas
         const items = document.querySelectorAll('#class-list li');
         items.forEach((i) => i.classList.remove('active'));
         event.target.classList.add('active');
@@ -147,29 +150,28 @@
         answerInput.value = '';
       }
 
-     function submitAnswer() {
-  const answer = answerInput.value.trim();
-  if (!answer) {
-    alert('Por favor escribe tu respuesta.');
-    return;
-  }
+      function submitAnswer() {
+        const answer = answerInput.value.trim();
+        if (!answer) {
+          alert('Por favor escribe tu respuesta.');
+          return;
+        }
 
-  answers.push({
-    pregunta: questions[currentQuestionIndex],
-    respuesta: answer,
-  });
+        answers.push({
+          pregunta: questions[currentQuestionIndex],
+          respuesta: answer,
+        });
 
-  currentQuestionIndex++;
+        currentQuestionIndex++;
 
-  if (currentQuestionIndex < questions.length) {
-    showQuestion();
-  } else {
-    saveAnswers();
-    questionnaire.classList.add('hidden');
-    goToNextClass();
-  }
-}
-
+        if (currentQuestionIndex < questions.length) {
+          showQuestion();
+        } else {
+          saveAnswers();
+          questionnaire.classList.add('hidden');
+          goToNextClass();
+        }
+      }
 
       function saveAnswers() {
         const classTitle =
@@ -211,8 +213,26 @@
         // El reproductor se inicializa dentro de loadVideo.
       }
 
-      document.getElementById('submit-answer-btn').addEventListener('click', submitAnswer);
+      document
+        .getElementById('submit-answer-btn')
+        .addEventListener('click', submitAnswer);
 
+      const profilePic = document.getElementById('profilePic');
+      const dropdownMenu = document.getElementById('dropdownMenu');
+
+      profilePic.addEventListener('click', (e) => {
+        e.stopPropagation();
+        dropdownMenu.classList.toggle('hidden');
+      });
+
+      window.addEventListener('click', (e) => {
+        if (
+          !profilePic.contains(e.target) &&
+          !dropdownMenu.contains(e.target)
+        ) {
+          dropdownMenu.classList.add('hidden');
+        }
+      });
     </script>
   </body>
 </html>
