--- a/perfil.html
+++ b/perfil.html
@@ -10,7 +10,7 @@
   <div class="profile-container">
     <h2>Mi Perfil</h2>
     <div class="profile-card">
-      <img id="profile-pic" src="https://i.pravatar.cc/100" alt="Foto de perfil">
+      <img id="profile-pic" src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_1280.png" alt="Foto de perfil">
       <input type="file" id="upload-photo" accept="image/*">
       <label for="upload-photo" class="btn">Cambiar Foto</label>
 
