--- a/index.html
+++ b/index.html
@@ -38,11 +38,22 @@
       </p>
     </section>
 
-    <div class="button-container">
+    <!-- <div class="button-container">
       <button onclick="window.location.href='clases.html'">Ir a Clases</button>
-    </div>
+    </div> -->
   </main>
 </body>
+<nav class="navbar">
+  <div class="navbar-logo">Mi Plataforma</div>
+  <ul class="navbar-links">
+    <li><a href="index.html">Inicio</a></li>
+    <li><a href="clases.html">Clases</a></li>
+    <li><a href="perfil.html">Perfil</a></li>
+    <li><a href="#" onclick="logout()">Cerrar sesión</a></li>
+  </ul>
+</nav>
+
+
 </html>
 
 
