--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <nav class="navbar">
   <div class="navbar-logo">Mi Plataforma</div>
   <ul class="navbar-links">
-    <li><a href="index.html">Inicio</a></li>
+    <li><a href="index.html">Sobre nosotros</a></li>
     <li><a href="clases.html">Clases</a></li>
     <li><a href="perfil.html">Perfil</a></li>
     <li><a href="#" onclick="logout()">Cerrar sesión</a></li>
