--- a/clases.html
+++ b/clases.html
@@ -47,7 +47,7 @@
               
             </li>
             <li
-              onclick="loadVideo('Clase 2', 'https://www.youtube.com/embed/3vl7kPIRzsY')"
+              onclick="loadVideo('LECCION 2. NACION SANTA', 'https://www.youtube.com/embed/3vl7kPIRzsY')"
             >
               Clase 2
             </li>
