--- a/clases.html
+++ b/clases.html
@@ -27,7 +27,7 @@
       />
       <div id="dropdownMenu" class="dropdown-menu hidden">
         <a href="perfil.html">👤 Mi perfil</a>
-        <a href="#" onclick="logout()">🔒 Cerrar sesión</a>
+        <a href="index.html" onclick="logout()">🔒 Cerrar sesión</a>
       </div>
     </div>
   </div>
