--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SION - Bienvenida</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="index.css">
 </head>
 <body class="bienvenida">
   <header class="welcome-header">
@@ -39,7 +39,8 @@
     </section>
 
     <div class="button-container">
-      <button onclick="window.location.href='clases.html'">Ir a Clases</button>
+      <button onclick="window.location.href='login.html'">Ingresar a la Plataforma</button>
+
     </div>
   </main>
 </body>
