--- a/index.html
+++ b/index.html
@@ -1,18 +1,28 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>SION - Bienvenida</title>
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="index.css"/>
+  <style>
+    
+  </style>
 </head>
 <body class="bienvenida">
-  <header class="welcome-header">
-    <h1>Bienvenido a SION Asesorías</h1>
-    <p>Transformando mentes, edificando en principios del Reino</p>
-  </header>
+  <div class="nav-container">
+    <nav class="nav-links">
+      <a href="#">Acerca de nosotros</a>
+      <a href="clases.html">Clases</a>
+    </nav>
+  </div>
 
   <main class="welcome-content">
+    <header class="welcome-header">
+      <h1>Bienvenido a SION Asesorías</h1>
+      <p>Transformando mentes, edificando en principios del Reino</p>
+    </header>
+
     <section class="info-section">
       <h2>¿Quiénes somos?</h2>
       <p>
@@ -40,13 +50,7 @@
 
     <div class="button-container">
       <button onclick="window.location.href='login.html'">Ingresar a la Plataforma</button>
-
     </div>
   </main>
 </body>
-
-
-
 </html>
-
-
